--- a/index.html
+++ b/index.html
@@ -1,264 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Creative Projects by Kadrixter - Innovation & Passion</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Poppins', sans-serif;
-      overflow: hidden;
-      background: #141414;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      position: relative;
-    }
-    .blob {
-      position: absolute;
-      border-radius: 50%;
-      filter: blur(100px);
-      opacity: 0.7;
-      animation: moveBlob 20s ease-in-out infinite;
-    }
-    .blob1 {
-      width: 300px;
-      height: 300px;
-      background: #ff5e62;
-      top: -100px;
-      left: -100px;
-    }
-    .blob2 {
-      width: 400px;
-      height: 400px;
-      background: #ff9966;
-      bottom: -150px;
-      right: -150px;
-      animation-delay: 5s;
-    }
-    .blob3 {
-      width: 200px;
-      height: 200px;
-      background: #ffcc33;
-      top: 50%;
-      left: -100px;
-      animation-delay: 10s;
-    }
-    @keyframes moveBlob {
-      0% { transform: translate(0, 0) scale(1); }
-      50% { transform: translate(50px, 50px) scale(1.2); }
-      100% { transform: translate(0, 0) scale(1); }
-    }
-    .container {
-      position: relative;
-      z-index: 2;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 20px;
-      backdrop-filter: blur(10px);
-      padding: 2rem;
-      text-align: center;
-      max-width: 600px;
-      width: 90%;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
-    }
-    h1 {
-      color: #fff;
-      margin-bottom: 0.5rem;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    }
-    h2 {
-      color: #ccc;
-      font-weight: 400;
-      margin-bottom: 1.5rem;
-      font-size: 1rem;
-    }
-    .projects {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    .project-button {
-      display: inline-block;
-      padding: 0.8rem 1.2rem;
-      font-size: 1.1rem;
-      font-weight: 600;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 10px;
-      background: linear-gradient(45deg, #00d8bb, #0030ce);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .project-button:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 20px rgba(0, 216, 187, 0.6);
-    }
-    .contact-button {
-      margin-top: 1.5rem;
-      padding: 0.6rem 1rem;
-      font-size: 0.95rem;
-      font-weight: 600;
-      color: #fff;
-      background: transparent;
-      border: 2px solid #00d8bb;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.3s;
-    }
-    .contact-button:hover {
-      background: rgba(0, 216, 187, 0.2);
-      transform: translateY(-3px);
-    }
-    .github {
-      margin-top: 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 0.5rem;
-    }
-    .github a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 700;
-      transition: color 0.3s;
-      display: flex;
-      align-items: center;
-      gap: 0.3rem;
-    }
-    .github a:hover {
-      color: #fff;
-    }
-    .github svg {
-      width: 24px;
-      height: 24px;
-      fill: currentColor;
-      transition: transform 0.3s;
-    }
-    .github a:hover svg {
-      transform: scale(1.2);
-    }
-    .modal {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s;
-      z-index: 9999;
-    }
-    .modal.show {
-      opacity: 1;
-      pointer-events: all;
-    }
-    .modal-content {
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 15px;
-      backdrop-filter: blur(10px);
-      padding: 2rem;
-      text-align: center;
-      position: relative;
-      max-width: 300px;
-      width: 90%;
-    }
-    .modal-content img {
-      width: 48px;
-      height: auto;
-      margin-bottom: 1rem;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .modal-content p {
-      color: #e0e0e0;
-      font-size: 1.5rem;
-      font-weight: 700;
-      text-shadow: 0 2px 5px rgba(224, 224, 224, 0.5);
-    }
-    .modal-close {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: transparent;
-      border: none;
-      font-size: 1.5rem;
-      color: #fff;
-      cursor: pointer;
-      transition: color 0.3s;
-    }
-    .modal-close:hover {
-      color: #ff5e62;
-    }
-  </style>
-</head>
-<body>
-  <div class="blob blob1"></div>
-  <div class="blob blob2"></div>
-  <div class="blob blob3"></div>
-  <div class="container">
-    <h1>My projects</h1>
-    <h2>No working? No problem!</h2>
-    <div class="projects">
-      <a class="project-button" href="http://83.168.95.35:3000" target="_blank">Tic tac toe</a>
-      <a class="project-button" href="http://83.168.95.35:80" target="_blank">Ghost talk</a>
-      <a class="project-button" href="https://kadrixter.github.io/plan-zajec" target="_blank">Lesson plan</a>
-      <a class="project-button" href="https://kadrixter.github.io/Godot-game" target="_blank">Game in godot (beta)</a>
-      <a class="project-button" href="https://kadrixter.github.io/Taryfikator-NYPD" target="_blank">For roblox roleplay</a>
-    </div>
-    <button class="contact-button" id="openModal">Contact</button>
-    <div class="github">
-      <a href="https://github.com/Kadrixter" target="_blank">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M12 0C5.37 0 0 5.373 0 12c0 5.303 3.438 9.8 8.205 11.387.6.113.82-.258.82-.577 
-            0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.757-1.333-1.757-1.09-.745.083-.729.083-.729 
-            1.205.085 1.84 1.236 1.84 1.236 1.07 1.835 2.807 1.305 3.492.998.107-.776.42-1.305.763-1.605-2.665-.305-5.466-1.332-5.466-5.93 
-            0-1.31.47-2.38 1.236-3.22-.124-.303-.536-1.524.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 0 1 3.003-.404c1.02.005 2.045.138 
-            3.003.404 2.29-1.552 3.297-1.23 3.297-1.23.655 1.653.243 2.874.12 3.176.77.84 1.235 1.91 1.235 3.22 0 4.61-2.803 
-            5.624-5.475 5.921.431.372.815 1.102.815 2.222 0 1.606-.015 2.896-.015 3.286 0 .322.216.694.825.576C20.565 21.796 24 17.298 24 
-            12c0-6.627-5.373-12-12-12z"></path>
-        </svg>
-        https://github.com/Kadrixter
-      </a>
-    </div>
-  </div>
-  <div class="modal" id="contactModal">
-    <div class="modal-content">
-      <button class="modal-close" id="closeModal">&times;</button>
-      <img src="https://www.svgrepo.com/show/353655/discord-icon.svg" alt="Discord Logo">
-      <p>Kadrixter</p>
-    </div>
-  </div>
-  <script>
-    const openModalButton = document.getElementById('openModal');
-    const closeModalButton = document.querySelector('.modal-close');
-    const contactModal = document.getElementById('contactModal');
-
-    openModalButton.addEventListener('click', () => {
-      contactModal.classList.add('show');
-    });
-
-    closeModalButton.addEventListener('click', () => {
-      contactModal.classList.remove('show');
-    });
-
-    window.addEventListener('click', (e) => {
-      if (e.target === contactModal) {
-        contactModal.classList.remove('show');
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Kadrixter • Projects</title>
+    <style>
+      :root {
+        --bg1: #0f172a;
+        --bg2: #1e293b;
+        --fg: #f1f5f9;
+        --accent: #38bdf8;
       }
-    });
-  </script>
-</body>
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
+        background: var(--bg1);
+        color: var(--fg);
+        line-height: 1.6;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
+      .hero {
+        position: relative;
+        height: 45vh;
+        min-height: 800px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background: linear-gradient(to bottom, var(--bg1) 0%, var(--bg2) 100%);
+        overflow: hidden;
+      }
+      .typewriter {
+        font-size: clamp(2.25rem, 5vw, 4rem);
+        letter-spacing: 0.04em;
+        min-height: 4rem;
+        white-space: nowrap;
+        overflow: hidden;
+        border-right: 2px solid var(--accent);
+      }
+      .hero p {
+        font-size: 1.125rem;
+        opacity: 0.9;
+      }
+      .button-row {
+        display: flex;
+        gap: 1rem;
+        margin-top: 1.5rem;
+        z-index: 1;
+      }
+      .button-row a {
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        color: white;
+        background-color: #171717;
+        padding: 1em 2em;
+        border: none;
+        border-radius: 0.6rem;
+        overflow: hidden;
+        text-decoration: none;
+      }
+      .button-row a span:not(:nth-child(6)) {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        height: 30px;
+        width: 30px;
+        border-radius: 50%;
+        transition: 0.6s ease;
+      }
+      .button-row a span:nth-child(6) {
+        position: relative;
+      }
+      .clouds {
+        pointer-events: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: 0;
+      }
+      .cloud {
+        position: absolute;
+        bottom: 20%;
+        background: #ffffff13;
+        border-radius: 50px;
+        width: 160px;
+        height: 50px;
+        filter: blur(2px);
+        animation: moveCloud linear infinite;
+      }
+      .cloud:nth-child(1) { left: -20%; animation-duration: 55s; bottom: 30%; }
+      .cloud:nth-child(2) { left: -30%; animation-duration: 70s; bottom: 50%; transform: scale(1.2); }
+      .cloud:nth-child(3) { left: -25%; animation-duration: 60s; bottom: 40%; transform: scale(0.9); }
+      .cloud:nth-child(4) { left: -35%; animation-duration: 80s; bottom: 60%; transform: scale(1.4); }
+      .cloud:nth-child(5) { left: -15%; animation-duration: 50s; bottom: 25%; transform: scale(0.7); }
+      @keyframes moveCloud {
+        from { transform: translateX(0) translateZ(0); }
+        to   { transform: translateX(140vw) translateZ(0); }
+      }
+      .projects {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+        gap: 1.5rem;
+        padding: 2rem 1rem;
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+        flex: 1 0 auto;
+      }
+      .card {
+        background: var(--bg2);
+        border-radius: 1rem;
+        padding: 1.75rem 1.5rem;
+        box-shadow: 0 4px 14px rgba(0, 0, 0, 0.35);
+        transform: translateY(20px);
+        opacity: 0;
+        transition: transform 0.45s ease-out, opacity 0.45s ease-out;
+      }
+      .card.visible { transform: translateY(0); opacity: 1; }
+      .card h3 { margin-bottom: 0.5rem; font-size: 1.25rem; }
+      .card p { margin-bottom: 1rem; font-size: 0.9rem; color: #94a3b8; }
+      .card a {
+        display: inline-block;
+        padding: 0.55rem 1.1rem;
+        border-radius: 0.5rem;
+        background: var(--accent);
+        color: #000;
+        font-weight: 600;
+        text-decoration: none;
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+      .card a:hover,
+      .card a:focus-visible {
+        transform: scale(1.04);
+        box-shadow: 0 0 0 3px rgba(56, 189, 248, 0.5);
+      }
+      footer {
+        text-align: center;
+        padding: 2rem 1rem 1.5rem;
+        font-size: 0.875rem;
+        color: #94a3b8;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+      }
+      .discord {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.3rem;
+      }
+      .discord svg { width: 1em; height: 1em; fill: var(--accent); }
+      footer a { color: var(--accent); text-decoration: none; }
+      footer a:hover { text-decoration: underline; }
+      @media (prefers-reduced-motion: reduce) {
+        .card, .cloud { animation: none !important; transition: none !important; }
+      }
+    </style>
+  </head>
+  <body>
+    <header class="hero">
+      <h1 class="typewriter" id="typewriter"></h1>
+      <p>My projects</p>
+      <div class="button-row">
+        <a href="https://kadrixter.github.io/plan-zajec/" target="_blank" rel="noopener">
+          <span class="circle1"></span>
+          <span class="circle2"></span>
+          <span class="circle3"></span>
+          <span class="circle4"></span>
+          <span class="circle5"></span>
+          <span class="text">Lesson plan</span>
+        </a>
+        <a href="https://kadrixter.github.io/Taryfikator-NYPD/" target="_blank" rel="noopener">
+          <span class="circle1"></span>
+          <span class="circle2"></span>
+          <span class="circle3"></span>
+          <span class="circle4"></span>
+          <span class="circle5"></span>
+          <span class="text">Penalty-Schedule-NYPD</span>
+        </a>
+        <a href="https://kadrixter.github.io/Godot-game/" target="_blank" rel="noopener">
+          <span class="circle1"></span>
+          <span class="circle2"></span>
+          <span class="circle3"></span>
+          <span class="circle4"></span>
+          <span class="circle5"></span>
+          <span class="text">Abandoned game Godot</span>
+        </a>
+      </div>
+      <div class="clouds">
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+      </div>
+    </header>
+
+    <footer>
+      <div class="discord">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.317 4.3698a19.7913 19.7913 0 00-4.8851-1.5152.0741.0741 0 00-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 00-.0785-.037 19.7363 19.7363 0 00-4.8852 1.515.0699.0699 0 00-.0321.0277C.5334 9.0458-.319 13.5799.0992 18.0578a.0824.0824 0 00.0312.0561c2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 00.0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 00-.0416-.1057c-.6518-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 01-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 01.0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 01.0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 01-.0066.1276 12.2983 12.2983 0 01-1.873.8914.0766.0766 0 00-.0407.1067c.3604.698.7719 1.3628 1.225 1.9931a.076.076 0 00.0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 00.0313-.0552c.5004-5.177-.8382-9.6739-3.5485-13.6604a.0601.0601 0 00-.0312-.0286zM8.02 15.3312c-1.1825 0-2.1569-1.0857-2.1569-2.4197 0-1.3339.9555-2.4196 2.157-2.4196 1.2108 0 2.1757 1.0952 2.1568 2.4196 0 1.334-.9555 2.4197-2.1569 2.4197zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.4197 0-1.3339.9554-2.4196 2.1569-2.4196 1.2108 0 2.1757 1.0952 2.1568 2.4196 0 1.334-.946 2.4197-2.1568 2.4197Z"/></svg>
+        Kadrixter
+      </div>• Contact •<a href="https://github.com/Kadrixter" target="_blank" rel="noopener">GitHub</a>
+    </footer>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const observer = new IntersectionObserver(
+          (entries, obs) => {
+            entries.forEach((e) => {
+              if (e.isIntersecting) {
+                e.target.classList.add("visible");
+                obs.unobserve(e.target);
+              }
+            });
+          },
+          { threshold: 0.2 }
+        );
+        document.querySelectorAll(".card").forEach((card) => observer.observe(card));
+
+        const typeTarget = document.getElementById("typewriter");
+        const texts = [
+          "Kadrixter",
+          "Keyboard imprint on my face",
+          "Game dev enthusiast",
+          "Gaming. Coding. No sleep.",
+          "Automating everything possible",
+          "Discord is my second home"
+          //Chipi Chipi Chapa Chapa
+        ];
+        let tIndex = 0;
+        let charIndex = 0;
+        let deleting = false;
+        const typingSpeed = 100;
+        const pause = 2000;
+
+        function type() {
+          const current = texts[tIndex];
+          if (!deleting) {
+            typeTarget.textContent = current.slice(0, ++charIndex);
+            if (charIndex === current.length) {
+              deleting = true;
+              setTimeout(type, pause);
+            } else {
+              setTimeout(type, typingSpeed);
+            }
+          } else {
+            typeTarget.textContent = current.slice(0, --charIndex);
+            if (charIndex === 0) {
+              deleting = false;
+              tIndex = (tIndex + 1) % texts.length;
+              setTimeout(type, typingSpeed);
+            } else {
+              setTimeout(type, typingSpeed / 2);
+            }
+          }
+        }
+        type();
+      });
+    </script>
+  </body>
 </html>
